<resources>
    <string name="app_name">Atomium</string>
    <string name="halls">Zalen</string>
    <string name="about">Over</string>
    <string name="search">Zoeken</string>
    <string name="aboutTextAtomium">Atomium, 1000 Brussel. Deze applicatie werd gemaakt door Sam Goeman in opdracht voor het vak Android Design and Development</string>
    <string name="searchButton">Zoek</string>
    <string name="searchHint">Zoek op naam van werk…</string>
    <string name="iconDescriptionHome">Home Icon</string>
    <string name="iconDescriptionHalls">Icon Zalen</string>
    <string name="iconDescriptionSearch">Icon Zoeken</string>
    <string name="iconDescriptionAbout">Icon Over</string>
    <string name="titleWerkenOverzicht">Werken</string>
    <string name="naam_zaal1">Groene zaal</string>
    <string name="naam_zaal2">Gele zaal</string>
    <string name="naam_zaal3">Blauwe zaal</string>
    <string name="naam_zaal4">Paarse zaal</string>
    <string name="naam_zaal5">Oranje zaal</string>
    <string name="naam_zaal6">Rode zaal</string>
    <string name="naam_werk1">De zingende schilder</string>
    <string name="auteur_werk1">Paul Magnet</string>
    <string name="jaar_werk1">1903</string>
    <string name="beschrijving_werk1">Zot werk van Paul Magnette</string>
    <string name="naam_werk2">Zotte doos</string>
    <string name="auteur_werk2">Kristof Blancheur</string>
    <string name="jaar_werk2">1940</string>
    <string name="beschrijving_werk2">Heel belangrijk werk van Blancheur, nog nooit eerder vertoond aan het publiek</string>
    <string name="naam_werk3">Kriskraskros</string>
    <string name="auteur_werk3">Sven Nys</string>
    <string name="jaar_werk3">2010</string>
    <string name="beschrijving_werk3">Nys had zin om een kunstwerk te maken en kwam tot dit resultaat</string>
    <string name="naam_werk4">Portefeuille weg</string>
    <string name="auteur_werk4">Jean Jacques Pourqui</string>
    <string name="jaar_werk4">1999</string>
    <string name="beschrijving_werk4">Pourqui\'s meesterwerk vandaag te bewonderen. Gerestaureerd door Jef Verplassen</string>
    <string name="naam_werk5">Sd-card</string>
    <string name="auteur_werk5">Minny Koekelberg</string>
    <string name="jaar_werk5">2013</string>
    <string name="beschrijving_werk5">Sd-card, helemaal veranderd naar wat zij dacht wat het moest zijn. Uniek kunstwerk!</string>
    <string name="naam_werk6">Tandenstoker</string>
    <string name="auteur_werk6">Bart Stokermans</string>
    <string name="jaar_werk6">2016</string>
    <string name="beschrijving_werk6">Een tandenstoker in een blokje kaas. Ongeziene vertoning.</string>
    <string name="naam_werk7">Ijs Kreim</string>
    <string name="auteur_werk7">Guido Aaltermans</string>
    <string name="jaar_werk7">2010</string>
    <string name="beschrijving_werk7">Lammetje van ijs, zot origineel en echt waar het beste wat we hier hebben</string>
    <string name="naam_werk8">Heuvel om te beklimmen</string>
    <string name="auteur_werk8">Patrick Lepetit</string>
    <string name="jaar_werk8">2012</string>
    <string name="beschrijving_werk8">Prachtig schilderij, net echt. Enkel hier te bezichtigen de komende 20 jaar</string>
    <string name="naam_werk9">Just ofnie</string>
    <string name="auteur_werk9">Gerard Concelfous</string>
    <string name="jaar_werk9">2015</string>
    <string name="beschrijving_werk9">Juist of niet? Filoseer er maar op los. Juist kan juist zijn maar ook fout, daarom deze tegenstelling van Concelfous.</string>
    <string name="naam_werk10">Lolita en haar entourage</string>
    <string name="auteur_werk10">Fifi Dolzoet</string>
    <string name="jaar_werk10">1965</string>
    <string name="beschrijving_werk10">Lolita en rare mensen op de foto. Ze had haar verkleed en zo naar een feestje geweest. Daar kwam ze andere rare wezens tegen</string>
    <string name="naam_werk11">Freaky</string>
    <string name="auteur_werk11">Klaas Rectangle</string>
    <string name="jaar_werk11">1945</string>
    <string name="beschrijving_werk11">Dit is wel heel freaky niet? Rectangle\'s laatste kunstwerk</string>
    <string name="naam_werk12">Vergeef me</string>
    <string name="auteur_werk12">Michiel Rapide</string>
    <string name="jaar_werk12">2000</string>
    <string name="beschrijving_werk12">Vergeven moet je doen in je leven. Daarom heeft meneer Rapide dit gemaakt zodat iedereen inziet dat je moet vergeven.</string>
    <string name="naamDetail">Naam:</string>
    <string name="auteurDetail">Auteur:</string>
    <string name="jaarDetail">Jaar:</string>
    <string name="beschrijvingDetail">Beschrijving:</string>
    <string name="callUs">Bel ons</string>
    <string name="mailUs">Email ons</string>
    <string name="nothingFound">Niets gevonden</string>
    <string name="title_works_1">Werken groene zaal</string>
    <string name="title_works_2">Werken gele zaal</string>
    <string name="title_works_3">Werken blauwe zaal</string>
    <string name="title_works_4">Werken paarse zaal</string>
    <string name="title_works_5">Werken oranje zaal</string>
    <string name="title_works_6">Werken rode zaal</string>
    <string name="pleaseEnter">Gelieve een zoekterm in te geven</string>
</resources>
