<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_werken_overzicht_lay_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.ehb.multec.museumapp.activities.WerkenOverzichtActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/titleWerkenOverzicht"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lblWerkenTitel"
            android:layout_weight="5"
            android:textSize="@dimen/textSizeTitle"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lstWerken" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="@dimen/paddingNavIconPortrait">

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescriptionHome"
                android:onClick="goToHome"
                app:srcCompat="@drawable/iconhome" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescriptionHalls"
                android:onClick="goHalls"
                app:srcCompat="@drawable/iconhall" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescriptionSearch"
                android:onClick="goSearch"
                app:srcCompat="@drawable/iconsearch" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/iconDescriptionAbout"
                android:onClick="goAbout"
                app:srcCompat="@drawable/iconabout" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
