<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.ehb.multec.museumapp.activities.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imgStartAtomium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/atomium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/halls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/halls"
                    android:textColor="@android:color/background_light"
                    android:textStyle="normal|bold"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="goHalls"
                    />

                <TextView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:text="@string/search"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="goSearch"/>

                <TextView
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"

                    android:text="@string/about"
                    android:textColor="@android:color/background_light"
                    android:textStyle="normal|bold"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="goAbout"/>
            </LinearLayout>

        </TableRow>

    </TableLayout>
</RelativeLayout>
