<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_werk_informatie_lay_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.ehb.multec.museumapp.activities.WerkInformatieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:id="@+id/scrScrollView"
            android:padding="@dimen/textPadding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblHeadTitle"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="normal|bold"
                    android:textSize="24sp"
                    android:paddingBottom="10dp" />

                <ImageView
                    android:id="@+id/imgWerkDetail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/atomium"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:text="@string/naamDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    tools:text="@string/naamDetail"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblNaam"
                    android:paddingBottom="10dp" />

                <TextView
                    android:text="@string/auteurDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    tools:text="@string/auteurDetail"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblAuteur"
                    android:paddingBottom="10dp" />

                <TextView
                    android:text="@string/jaarDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    tools:text="@string/jaarDetail"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblJaar"
                    android:paddingBottom="10dp" />

                <TextView
                    android:text="@string/beschrijvingDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    tools:text="@string/beschrijvingDetail"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblBeschrijving" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="@dimen/paddingNavIconPortrait">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goToHome"
                app:srcCompat="@drawable/iconhome" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goHalls"
                app:srcCompat="@drawable/iconhall" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goSearch"
                app:srcCompat="@drawable/iconsearch" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goAbout"
                app:srcCompat="@drawable/iconabout" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
